@@ -36,6 +36,62 @@
         <a href="tour.html"> <img src="data/images/cheese-tour.png" alt="cheese tour"/> </a>
       </div><!-- top -->
 
+      <div id="warningbox">
+        <p>
+        all hell broke loose yesterday: i got a phone call yesterday by a nice lady,
+        which presented herself as a former advocate of apple. she told me that the
+        objective of her team was to find copyright and patent violations and therefore
+        she called me:
+        </p>
+
+        <p>
+        obviously i did something wrong by starting such a project as cheese, which is
+        a pure clone of photo booth. this would violate the us patent
+        IC 009. US 021 023 026 036 038. G &amp; S: computer software used for image
+        editing, image acquisition, and image viewing, which was filed on
+        february the 28th 2006
+        and as gnome is registered and known as an organization of the usa, this patent
+        would be applicable.
+        </p>
+
+        <p>
+        i thought, that such patents would just apply, if there is some commercial
+        interest behind it, but she knew it better: as i created cheese in the summer
+        of code program, i "worked" for google, which makes everything a commercial
+        project, even if now i "probably" do not get any money. in addition the full us
+        patent law applies, as i a) worked for google in the usa for the summer of code
+        program and b) cheese is now included in gnome, which is an organization
+        registered in the usa.
+        </p>
+
+        <p>
+        she also told me, that of course there are similar applications like photo
+        booth, but cheese acts as a clone and therefore an illegal copy because it
+        works on intel based macs and therefore would be a competitor of photo booth.
+        the fact, that cheese just runs on linux on the intel based macs was worthless
+        by her.
+        </p>
+
+        <p>
+        so it looks pretty bad for me now.. i got a deadline of 5 work days to remove
+        cheese code and binary versions from all places i have access to (probably
+        svn.gnome.org, ftp.gnome.org, ...).
+        </p>
+
+        <p>
+        i already contacted a lawyer, which thinks he can help me, but of course it is
+        david against goliath...
+        </p>
+
+        <p>
+        so, if you know a way out of this, please contact me!
+        </p>
+
+        <p>
+        read the <a href="http://home.cs.tum.edu/~siegel/news/2008_04_01-bye_bye_cheese">original entry here</a>
+        </p>
+
+      </div>
       <!--
       <div id="warningbox">
         <p>
