@@ -1,3 +1,8 @@
+2008-04-01  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  add the patent violation news entry
+
 2008-03-24  Vincent Untz  <vuntz@gnome.org>
 
 	* www.gnome.org/htaccess: change order of redirecto to get the ics
